--- a/slide/mm-slide-intro.tex
+++ b/slide/mm-slide-intro.tex
@@ -34,7 +34,7 @@
 \begin{itemize}
 \item Advocate for software safety
 \item We audit Cardano smart contracts
-\item We maintain cooked-validators and Pirouette
+\item We maintain Cooked-validators and Pirouette
 \item We conduct research activities and aim for extending our involvement in formal methods community
 \end{itemize}
 \end{block}
